--- a/src/app/app.tpl.html
+++ b/src/app/app.tpl.html
@@ -1,1 +1,12 @@
-<h2>sonrisa (;</h2>
+<core-header-panel>
+  <core-toolbar id="mainheader">
+    <paper-icon-button id="navicon"
+                       icon="arrow-back"></paper-icon-button>
+    <span flex>Title</span>
+    <paper-icon-button id="searchbutton"
+                       icon="search"></paper-icon-button>
+  </core-toolbar>
+
+  <div ui-view></div>
+
+</core-header-panel>
