more consistent states

--- a/src/app/choose.tpl.html
+++ b/src/app/choose.tpl.html
@@ -1,4 +1,4 @@
 <p>choose mood:
-<a href="#/happy">happy</a>
-<a href="#/sad">sad</a>
+<a href="#/appy/happy">happy</a>
+<a href="#/appy/sad">sad</a>
 </p>
