--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,40 @@
+body {
+  font-family: sans-serif;
+}
+core-header-panel {
+  background: #fff;
+/* height: 100% fails here on some browsers */
+  height: 100vh;
+  width: 100vw;
+}
+core-toolbar {
+  background-color: #03a9f4;
+}
+p {
+  margin: 20px;
+  padding: 80px 20px;
+  border-radius: 20px;
+  background-color: #eee;
+}
 
+body {
+  font-family: sans-serif;
+}
+core-header-panel {
+  background: #fff;
+/* height: 100% fails here on some browsers */
+  height: 100vh;
+  width: 100vw;
+}
+core-toolbar {
+  background-color: #03a9f4;
+}
+p {
+  margin: 20px;
+  padding: 80px 20px;
+  border-radius: 20px;
+  background-color: #eee;
+}
 html,
 body {
   height: 100%;
