--- a/src/app/sad.tpl.html
+++ b/src/app/sad.tpl.html
@@ -1,1 +1,11 @@
-<p>sad</p>
+<section id="graphs" class="well">
+  <h1>Basic Graphs</h1>
+
+  <p>Basic line, area and bar charts can be composed together in the same chart.</p>
+
+
+
+  <!--<div d3-bars bar-height="20" bar-padding="5"></div>-->
+
+</section>
+
