kind of embedding of funnel

--- a/src/app/sad.tpl.html
+++ b/src/app/sad.tpl.html
@@ -1,8 +1,10 @@
 <section id="graphs" class="well">
+
   <h1>Basic Graphs</h1>
 
   <p d3-bars bar-height="20" bar-padding="5" data="data"></p>
 
+  <p funnel-chart width="600" height="450" bottom-pct="1/4" data="conversions"></p>
 
 </section>
 
