button active state

--- a/src/app/happy.tpl.html
+++ b/src/app/happy.tpl.html
@@ -1,5 +1,9 @@
 <p>
-  <highchart id="happiness-chart" config="chartConfig"></highchart>
+
+<p d3-bars bar-height="20" bar-padding="5" data="data"></p>
+
+<highchart id="happiness-chart" config="chartConfig"></highchart>
+
 </p>
 
 
