--- a/src/app/sad.tpl.html
+++ b/src/app/sad.tpl.html
@@ -5,7 +5,7 @@
   <paper-button raisedbutton="" class="start-job colored"
                 label="start mailing job" role="button" tabindex="0"
                 ng-class="{active : sadCtrl.isMailingJobActive}"
-                ng-click="sadCtrl.startMailingJob()"
+                ng-click="sadCtrl.jumpToEndState()"
                 aria-label="start mailing job">
   </paper-button>
 
