--- a/src/app/app.styl
+++ b/src/app/app.styl
@@ -22,6 +22,7 @@ p {
 
 #sad-graphs
   paper-button.start-job
+    background-color: #03a9f4;
     margin-left: 40%;
     &.active
-      background-color: #03a9f4;
+      background-color: darkgrey;
